istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi
spec:
  hosts:
  - userapi.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /health
    route:
    - destination:
        host: userapi-v1.default.svc.cluster.local
      weight: 80
    - destination:
        host: userapi-v2.default.svc.cluster.local
      weight: 20
