istio/virtualservice-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-gateway
spec:
  hosts:
  - "*" 
  gateways:
  - userapi-gateway 
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: userapi.default.svc.cluster.local
